--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                  <div class="area-4">
                      <h2 class="area-1-header">Stand out to the right audience</h2>
                      <p class="area-1-para">
-                        Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital place.
+                        Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.
                      </p>
                      <a href="#" class="area-1-a">LEARN MORE</a>
                 </div>
