--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                  <div>
                      <p class = "para">
                          <img src="images/image-jennie.jpg" alt="" class="img-people">
-                        Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended! 
+                        Incredible end results! Our sales increased over 400% when we worked with Sunnyside. Highly recommended! 
                      </p>
                      <p class = "user">Jennie F.</p> 
                      <p class = "position">Business Owner</p> 
